src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__mismatched_parantheses_recovery_test.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E006]: Missing expected Token `)`
  ┌─ <internal>:3:19
  │
3 │             (1 + 2;
  │                   ^ Missing expected Token `)`
