src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__pointer_type_without_to_test.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected `TO` but found INT
  ┌─ <internal>:3:21
  │
3 │             POINTER INT;
  │                     ^^^ Unexpected token: expected `TO` but found INT
